--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div>
             <p>hello shubham singh</p>
         </div>
-        <p>  shubham singhS</p>
+        <p>  shubham singhS2</p>
     </section>
 </body>S
 </html>
