--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <p>hello shubham singh</p>
         </div>
         <p>  shubham singhS24747</p>
-        <p>bahadurpur</p>
+        <p>bahadurpur thikana </p>
     </section>
 </body>
 
