--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div>
             <p>hello shubham singh</p>
         </div>
-        <p>  shubham singhS24747</p>
+        <p>  shubham singh</p>
         <p>bahadurpur thikana </p>
         <p>alwar</p>
     </section>
