last and ony one

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         </div>
         <p>  shubham singh</p>
         <p>bahadurpur thikana </p>
-        <p>alwar</p>
+        <p>alwar shubham singh</p>
+        <p>hello singh</p>
     </section>
 </body>
 
