--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p>bahadurpur thikana </p>
         <p>alwar shubham singh</p>
         <p>hello singh</p>
-        <p>hello last and final change</p>
+        <p>hello last </p>
     </section>
 </body>
 
