--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <p>alwar shubham singh</p>
         <p>hello singh</p>
         <p>hello last </p>
+        <div>
+            <p>hello last div</p>
+        </div>
     </section>
 </body>
 
