--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <p>hello last </p>
         <p>hello last and final change</p>
         <p>shubham singh</p>
+        <div>
+           <p>it's div content</p>
+        </div>
     </section>
 </body>
 
